# codeix

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  release-please-config.json  server.json
.claude/: orders.json  settings.json
.codeindex/: files.jsonl  index.json  symbols.jsonl  texts.jsonl
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-wrappers.yml  release-please.yml  release.yml  site.yml
docs/: architecture.md
npm/: install.js  package.json  run.js
python/: pyproject.toml
python/codeix/: __init__.py  __main__.py
scripts/: bench.py
scripts/bench/: __init__.py  __main__.py  ab.py  common.py  index_speed.py  questions.json  search_quality.py  search_value.py
site/: .gitignore  config.toml
site/content/: _index.md
site/static/: CNAME
site/templates/: index.html  section.html  spec.html
spec/: codeindex.md  files.schema.json  index.schema.json  symbols.schema.json  texts.schema.json
src/: lib.rs  main.rs
src/cli/: build.rs  query.rs  serve.rs
src/index/: format.rs  mod.rs  reader.rs  writer.rs
src/mount/: handler.rs  mod.rs  walker.rs
src/parser/: c_lang.rs  cpp.rs  csharp.rs  go.rs  helpers.rs  java.rs  javascript.rs  languages.rs  markdown.rs  metadata.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  sfc.rs  treesitter.rs  typescript.rs
src/scanner/: hasher.rs  mod.rs  mount.rs  walker.rs
src/server/: db.rs  format.rs  mcp.rs  mod.rs  snippet.rs
src/utils/: format.rs  hasher.rs  manifest.rs  mod.rs
src/watcher/: handler.rs  mod.rs
